# pycrypto_rsa_legacy

./: .gitignore  LICENSE  LICENSE.LGPL-3.0  LICENSE.MIT  README.md  meson.build  pyproject.toml  vcpkg.json
.github/workflows/: build.yaml
src/: _pycrypto_rsa_legacy.pyi
src/pycrypto_rsa_legacy/: __init__.py  _plain_rsa_key.pyi  _rsa.c  plain_rsa_key.c  plain_rsa_key.py  rsa.py
tests/: base.py  test_native.py  test_python.py
